--- a/app/globals.css
+++ b/app/globals.css
@@ -6,4 +6,28 @@
   .primary-btn {
     @apply px-3 py-1 bg-primaryColor text-white rounded-lg flex items-center justify-center;
   }
+  .card-wrapper {
+    @apply flex items-center w-[300px] h-[400px] md:w-[600px] md:h-[450px] shadow-lg bg-transparent;
+  }
+  .form {
+    @apply w-full md:w-1/2 flex flex-col h-full  justify-start p-4 gap-4 bg-zinc-100/70 border-2 border-softGray rounded-e-lg;
+  }
+  .sidebar__item {
+    @apply flex items-center justify-between w-full bg-lightBlue rounded-lg py-2 px-4;
+  }
+  .sidebar__item-title {
+    @apply text-lg font-bold text-white;
+  }
+  .sidebar__item-value {
+    @apply text-lg font-semibold;
+  }
+  .member__item {
+    @apply flex items-center justify-between w-full;
+  }
+  .member__item-value {
+    @apply truncate text-base;
+  }
+  .member__item-title {
+    @apply text-sm font-semibold;
+  }
 }
