--- a/app/globals.css
+++ b/app/globals.css
@@ -28,7 +28,7 @@
     @apply flex items-center w-[300px] h-[450px] md:w-[600px] md:h-[450px] shadow-lg bg-transparent;
   }
   .form {
-    @apply w-full md:w-1/2 flex flex-col h-full  justify-start p-4 gap-4 bg-zinc-100/70 border-2 border-softGray rounded-e-lg;
+    @apply w-full md:w-1/2 flex flex-col h-full  justify-start p-4 gap-4 bg-zinc-100/70 border-2 border-softGray md:rounded-e-lg rounded-lg;
   }
   .sidebar__item {
     @apply flex items-center justify-between w-full bg-lightBlue rounded-lg py-2 px-4;
